#43 Added styles resources view

--- a/angular-client/src/app/components/users/view-users/view-users.component.html
+++ b/angular-client/src/app/components/users/view-users/view-users.component.html
@@ -25,8 +25,8 @@
           <b>Pronouns: </b> {{user.pronouns}}</div>
       </div>
       <div class="actions">
-        <button mat-button matSuffix mat-icon-button (click)="delete(user._id)">
-          <mat-icon matSuffix color="warn">delete</mat-icon>
+        <button mat-button mat-icon-button (click)="delete(user._id)">
+          <mat-icon color="warn">delete</mat-icon>
         </button>
       </div>
     </mat-card-content>
