--- a/angular-client/src/app/components/resources/view-resources/view-resources.component.css
+++ b/angular-client/src/app/components/resources/view-resources/view-resources.component.css
@@ -1,13 +1,18 @@
-mat-card {
-    margin: 1em;
-    width: 400px;
-}
-
-mat-card-title {
-    font-size: 2rem;
-    font-weight: bold;
-}
-
 .tab-content {
-    margin: 1.5em;
+    margin: 1.5rem;
+}
+
+.resource-card {
+    display: flex;
+    margin: 1rem 0;
+}
+
+.view-content,
+mat-card-content {
+    width: 100%;
+    display: flex;
+}
+
+.content {
+    flex: 1;
 }
