#43 Added naming style for headers

--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="editingLog != log">
             <mat-card-content>
                 <div class="caller">
-                    <div *ngIf="log.name && log.name !== '' " class="primary-font caller-name">
+                    <div *ngIf="log.name && log.name !== '' " class="naming caller-name">
                         {{log.name}}
                     </div>
                     <div *ngIf="log.pronouns && log.pronouns !== '' " class="caller-pronouns">
