--- a/angular-client/src/app/components/users/view-users/view-users.component.html
+++ b/angular-client/src/app/components/users/view-users/view-users.component.html
@@ -15,7 +15,7 @@
   <mat-card class="user-card">
     <mat-card-content>
       <div class="info">
-        <div class="user-name primary-font">Name: {{user.name}}</div>
+        <div class="user-name naming">{{user.name}}</div>
         <div *ngIf="user.email && user.email !== ''">
           <b>Email: </b> {{user.email}}
         </div>
