--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
@@ -27,10 +27,12 @@
     margin-right: 1rem;
 }
 
+.caller {
+    align-items: center;
+}
+
 .caller-name {
-    font-weight: 500;
     text-transform: capitalize;
-    margin-bottom: 1rem;
 }
 
 .caller-pronouns {
