#43 Added styles to history phone calls

--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.css
@@ -58,3 +58,16 @@
     font-weight: 200;
 }
 
+.history-container {
+    display: flex;
+}
+
+.history-content {
+    flex: 1;
+}
+
+.history-action {
+    display: flex;
+    align-items: flex-end;
+}
+
