#43 Add phonelog styles

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -36,8 +36,8 @@
       </mat-slide-toggle>
     </div>
 
-    <mat-form-field class="notes">
-      <textarea matInput placeholder="Message" matTextareaAutosize matAutosizeMinRows="5" name="notes" formControlName="notes"></textarea>
+    <mat-form-field class="message">
+      <textarea matInput placeholder="Message" matTextareaAutosize matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
       <mat-hint align="start">Their message, when to call, extension number...</mat-hint>
     </mat-form-field>
 
