--- a/angular-client/src/app/components/resources/edit-resource/edit-resource.component.html
+++ b/angular-client/src/app/components/resources/edit-resource/edit-resource.component.html
@@ -1,56 +1,64 @@
-<form class="form" [formGroup]="resourceForm">
-    <mat-form-field>
-      <input matInput required placeholder="Name" name="name" formControlName="name">
-    </mat-form-field>
+<div class="container">
+  <div class="form-container">
+    <form class="form" [formGroup]="resourceForm">
+      <mat-form-field>
+        <input matInput required placeholder="Name" name="name" formControlName="name">
+      </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Term" name="term" formControlName="term">
-    </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Term" name="term" formControlName="term">
+      </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Email" name="email" formControlName="email">
-    </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Email" name="email" formControlName="email">
+      </mat-form-field>
 
-    <mat-form-field>
-      <span matPrefix>+1 &nbsp;</span>
-      <input matInput placeholder="Telephone" name="telephone" formControlName="phone">
-    </mat-form-field>
+      <mat-form-field>
+        <span matPrefix>+1 &nbsp;</span>
+        <input matInput placeholder="Telephone" name="telephone" formControlName="phone">
+      </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Location" name="location" formControlName="location">
-    </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Location" name="location" formControlName="location">
+      </mat-form-field>
 
-    <div [ngSwitch]="resource.kind">
+      <div [ngSwitch]="resource.kind">
 
-      <ng-container *ngSwitchCase="'Housing'">
-        <mat-form-field>
-          <input matInput placeholder="Notes" name="notes" formControlName="notes">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Gender" name="gender" formControlName="gender">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Constraints" name="constraints" formControlName="constraints">
-        </mat-form-field>
-      </ng-container>
+        <ng-container *ngSwitchCase="'Housing'">
+          <mat-form-field>
+            <input matInput placeholder="Notes" name="notes" formControlName="notes">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Gender" name="gender" formControlName="gender">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Constraints" name="constraints" formControlName="constraints">
+          </mat-form-field>
+        </ng-container>
 
-      <ng-container *ngSwitchCase="'Medical'">
-        <mat-form-field>
-          <input matInput placeholder="Cost" name="without_cost" formControlName="without_cost">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Waitlist Time" name="waitlist_time" formControlName="waitlist_time">
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput placeholder="Schedule" name="schedule_availability" formControlName="schedule_availability">
-        </mat-form-field>
-      </ng-container>
-    </div>
+        <ng-container *ngSwitchCase="'Medical'">
+          <mat-form-field>
+            <input matInput placeholder="Cost" name="without_cost" formControlName="without_cost">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Waitlist Time" name="waitlist_time" formControlName="waitlist_time">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Schedule" name="schedule_availability" formControlName="schedule_availability">
+          </mat-form-field>
+        </ng-container>
+      </div>
 
-    <mat-card-actions>
-      <button mat-button (click)="update()" [disabled]="resourceForm.invalid">Update</button>
-      <button mat-button (click)="delete()">Delete</button>
-      <button mat-button (click)="cancelEdit()">Cancel</button>
-    </mat-card-actions>
 
-  </form>
+      <button mat-raised-button color="primary" (click)="update()" [disabled]="resourceForm.invalid">Update</button>
+      <button mat-raised-button (click)="cancelEdit()">Cancel</button>
+
+    </form>
+  </div>
+
+  <div class="edit-actions">
+    <button mat-icon-button (click)="delete()">
+      <mat-icon color="warn">delete</mat-icon>
+    </button>
+  </div>
+</div>
