#43 Added styles to documents and notes

--- a/angular-client/src/app/components/casefiles/casefiles.component.css
+++ b/angular-client/src/app/components/casefiles/casefiles.component.css
@@ -1,5 +1,9 @@
 @import '../participants/participant-profile/participant-profile.component.css';
 
+.container {
+    margin: 2rem 0;
+}
+
 /* Casefile description and notes */
 .caseNotes {
     width: 36%;
