--- a/angular-client/src/app/components/documents/documents.component.css
+++ b/angular-client/src/app/components/documents/documents.component.css
@@ -1,1 +1,5 @@
-@import '../participants/participant-profile/participant-profile.component.css'
+@import '../participants/participant-profile/participant-profile.component.css';
+
+.container {
+    margin: 2rem 0;
+}
