--- a/angular-client/src/app/components/casefiles/casefiles.component.html
+++ b/angular-client/src/app/components/casefiles/casefiles.component.html
@@ -20,8 +20,8 @@
       </mat-expansion-panel-header>
 
       <!-- Casefile Information -->
-      <h4>Urgency: </h4>{{casefile.urgency}}
-      <h4>Type: </h4>{{casefile.type}}
+      <h4 class="info"><div class="label">Urgency:</div>{{casefile.urgency}}</h4>
+      <h4 class="info"><div class="label">Type:</div>{{casefile.type}}</h4>
       <h4 *ngIf="casefile.notes[0] || (casefile.status == 'In progress')">Notes:</h4>
 
       <!-- Casefile completed: note as text -->
@@ -203,7 +203,9 @@
       <div class="bottomMenu">
         <button type="button" *ngIf="casefile.status == 'In progress' " mat-raised-button color="primary" (click)="completeCasefile(casefile, caseIndex)">Finalize Casefile</button>
         <button type="button" *ngIf="casefile.status == 'Completed' " mat-raised-button (click)="reopenCasefile(casefile, caseIndex)">Reopen Casefile</button>
-        <button type="button" id="deleteCaseBtn" mat-raised-button color="warn" (click)="deleteCasefile(casefile._id)">Delete Casefile</button>
+        <button type="button" id="deleteCaseBtn" mat-icon-button (click)="deleteCasefile(casefile._id)">
+          <mat-icon color="warn">delete</mat-icon>
+        </button>
       </div>
 
     </mat-expansion-panel>
