--- a/angular-client/src/app/components/participants/view-participants/view-participants.component.css
+++ b/angular-client/src/app/components/participants/view-participants/view-participants.component.css
@@ -1,18 +1,18 @@
 .mat-card {
   margin: 1em;
-  width: 400px;
+  width: 50rem;
 }
 
 .avatar {
-  line-height: 4rem;
+  line-height: 5rem;
   font-size: 2rem;
   text-align: center;
   color: white;
 }
 
 .mat-card-avatar {
-  height: 4rem;
-  width: 4rem;
+  height: 5rem;
+  width: 5rem;
 }
 
 a {
@@ -20,10 +20,20 @@ a {
   color: black;
 }
 
-mat-card {
-  margin-left: 1em;
-}
-
 .tab-content {
   margin: 1.5em;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.participant-header {
+  margin-bottom: 1rem;
+}
+
+.username {
+  font-weight: 100;
 }
