Now correctly retrieving notes and documents #47

--- a/angular-client/src/app/components/documents/documents.component.html
+++ b/angular-client/src/app/components/documents/documents.component.html
@@ -14,7 +14,7 @@
     </mat-expansion-panel-header>
     <h4>Attachments:</h4>
     <mat-grid-list cols="1" *ngFor="let doc of document.attachment">
-      <a href={{getDocumentURL(doc)}} target="_blank">{{doc}}</a>
+      <a href={{getDocumentURL(document._id,doc)}} target="_blank">{{doc}}</a>
     </mat-grid-list>
     <br>
     <button mat-raised-button (click)="deleteDocument(document._id)">Delete Document</button>
