--- a/angular-client/src/app/components/notes/notes.component.html
+++ b/angular-client/src/app/components/notes/notes.component.html
@@ -13,9 +13,9 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     <h4>Note:</h4>
-    <img src={{getImageURL(note.attachment)}}>
+    <img src={{getImageURL(note._id,note.attachment)}}>
     <h4>Attachments:</h4>
-    <p><a href={{getImageURL(note.attachment)}} target="_blank">{{note.attachment}}</a></p>
+    <p><a href={{getImageURL(note._id,note.attachment)}} target="_blank">{{note.attachment}}</a></p>
     <button id="deleteNoteBtn" mat-raised-button (click)="deleteNote(note._id)">Delete Note</button>
   </mat-expansion-panel>
 </mat-accordion>
