--- a/angular-client/src/app/components/documents/document-modal/document-modal.component.html
+++ b/angular-client/src/app/components/documents/document-modal/document-modal.component.html
@@ -12,6 +12,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+  <button mat-raised-button color="primary" (click)="submit()" [disabled]="!file">Submit</button>
   <button mat-raised-button (click)="cancel()">Close</button>
 </mat-dialog-actions>
