--- a/angular-client/src/app/components/notes/note-modal/note-modal.component.html
+++ b/angular-client/src/app/components/notes/note-modal/note-modal.component.html
@@ -12,6 +12,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+  <button mat-raised-button color="primary" (click)="submit()" [disabled]="!file">Submit</button>
   <button mat-raised-button (click)="cancel()">Cancel</button>
 </mat-dialog-actions>
