--- a/angular-client/src/app/components/documents/document-modal/document-modal.component.css
+++ b/angular-client/src/app/components/documents/document-modal/document-modal.component.css
@@ -3,9 +3,13 @@ img {
 }
 
 .fileupload {
-    margin-bottom: 1em;
+    margin-bottom: 2rem;
 }
 
-.fileupload input {
-    font-size: 1em;
+.fileupload-input {
+    font-size: 2rem;
+}
+
+mat-progress-bar {
+    margin: 2rem 0;
 }
