--- a/angular-client/src/app/components/documents/document-modal/document-modal.component.html
+++ b/angular-client/src/app/components/documents/document-modal/document-modal.component.html
@@ -7,11 +7,12 @@
     </mat-form-field>
     <div class="fileupload">
       <h4>Upload Document</h4>
-      <input type="file" #upload (change)="handleFileInput(upload.files)" accept="application/pdf">
+      <input type="file" #upload (change)="handleFileInput(upload.files)" accept="application/pdf" [disabled]="isLoading">
+      <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
     </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="submit()" [disabled]="!file">Submit</button>
+  <button mat-raised-button color="primary" (click)="submit()" [disabled]="!file || isLoading">Submit</button>
   <button mat-raised-button (click)="cancel()">Close</button>
 </mat-dialog-actions>
