--- a/angular-client/src/app/components/notes/note-modal/note-modal.component.css
+++ b/angular-client/src/app/components/notes/note-modal/note-modal.component.css
@@ -7,10 +7,14 @@ img {
 }
 
 .fileupload {
-    margin-bottom: 1em;
+    margin-bottom: 2rem;
 }
 
-.fileupload input {
-    font-size: 1em;
+.fileupload-input {
+    font-size: 2rem;
+}
+
+mat-progress-bar {
+    margin: 2rem 0;
 }
 
