--- a/angular-client/src/app/components/notes/note-modal/note-modal.component.html
+++ b/angular-client/src/app/components/notes/note-modal/note-modal.component.html
@@ -7,11 +7,12 @@
     </mat-form-field>
     <div class="fileupload">
       <h4>Upload File</h4>
-      <input type="file" #upload (change)="handleFileInput(upload.files)" accept="image/*">
+      <input type="file" class="fileupoad-input" #upload (change)="handleFileInput(upload.files)" accept="image/*" [disabled]="isLoading">
+      <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
     </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="submit()" [disabled]="!file">Submit</button>
+  <button mat-raised-button color="primary" (click)="submit()" [disabled]="(!file && note.text.length==0) || isLoading">Submit</button>
   <button mat-raised-button (click)="cancel()">Cancel</button>
 </mat-dialog-actions>
