--- a/angular-client/src/app/components/notes/notes.component.css
+++ b/angular-client/src/app/components/notes/notes.component.css
@@ -10,6 +10,18 @@
 }
 
 img {
-    max-width: 400px;
-    max-height: 600px;
+    max-width: 40rem;
+    max-height: 60rem;
+}
+
+.note-container {
+    display: flex;
+}
+
+.note-content {
+    flex: 1;
+}
+
+.deleteNoteBtn {
+    align-self: flex-end;
 }
