#113 Added phonelog modal and tab components

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -9,7 +9,7 @@
     <a class="nav-link" routerLink="resources">
       <button mat-button>Resources</button>
     </a>
-    <a class="nav-link" routerLink="dashboard/phonelog">
+    <a class="nav-link" (click)="addPhonelog()">
       <button mat-button>Phone Log</button>
     </a>
   </span>
