--- a/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/view-phonelog/view-phonelog.component.html
@@ -13,7 +13,7 @@
                         {{log.name}}
                     </div>
                     <div *ngIf="log.pronouns && log.pronouns !== '' " class="caller-pronouns">
-                        ( {{log.pronouns}} )
+                        ( pronouns: {{log.pronouns}} )
                     </div>
                 </div>
                 <div *ngIf="log.callertype && log.callertype !== '' " class="caller-type">
