--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -8,9 +8,6 @@
       <input matInput placeholder="Name of caller" name="name" formControlName="name">
     </mat-form-field>
 
-    <!-- <mat-form-field class="pronouns">
-      <input matInput placeholder="Pronouns" name="pronouns" formControlName="pronouns">
-    </mat-form-field> -->
     <mat-form-field class="pronouns">
       <mat-select placeholder="Pronoun" name="pronouns" formControlName="pronouns">
         <mat-option *ngFor="let pronoun of pronouns" [value]="pronoun">
@@ -33,8 +30,16 @@
   </mat-form-field>
 
   <div class="message-header">
-    <mat-form-field>
+    <!-- <mat-form-field>
       <input matInput placeholder="Reason for call" name="subject" formControlName="subject">
+    </mat-form-field> -->
+
+    <mat-form-field>
+      <mat-select placeholder="Reason for call" name="subject" formControlName="subject">
+        <mat-option *ngFor="let subject of subjects" [value]="subject">
+          {{subject}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
     <mat-slide-toggle name="urgent" formControlName="urgent" [checked]="urgent">
