#113 Added dashboard to toolbar and phone icon

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -2,6 +2,10 @@
    font-size: 2rem;
 }
 
+.nav-home {
+    margin-right: 1rem;
+}
+
 .mat-toolbar a.nav-link {
     color: white;
     text-decoration: none;
