--- a/angular-client/src/app/components/users/register-user/register-user.component.html
+++ b/angular-client/src/app/components/users/register-user/register-user.component.html
@@ -1,53 +1,40 @@
-<div fxLayout="row wrap" fxLayoutAlign="space-around center" fxFlex="100">
-  <mat-card fxFlex="80" class="register-card">
+<div class="container">
+  <mat-card class="register-card">
     <mat-card-title>
       Register a User
     </mat-card-title>
-    <form id="registrationForm" name="registrationForm" (ngSubmit)="signUp()" *ngIf="!loading" #userForm="ngForm">
+    <form [formGroup]="form" (ngSubmit)="signUp()" #f="ngForm" *ngIf="!loading">
       <mat-card-content>
 
-        <div class="form-group">
-          <mat-form-field fxFlex="100">
-            <input name="rName" matInput required placeholder="Name" class="form-control" [(ngModel)]="user.name">
-          </mat-form-field>
-        </div>
+        <mat-form-field>
+          <input matInput placeholder="Name" formControlName="name">
+        </mat-form-field>
 
-        <div class="form-group">
-          <mat-form-field fxFlex="100">
-            <input name="rPronouns" matInput placeholder="Pronouns" class="form-control" [(ngModel)]="user.pronouns">
+          <mat-form-field>
+            <input matInput placeholder="Pronouns" formControlName="pronouns">
           </mat-form-field>
-        </div>
 
-        <div class="form-group">
-          <mat-form-field fxFlex="100">
-            <input name="rEmail" matInput type="email" placeholder="Email" class="form-control" id="rEmail" [(ngModel)]="user.email"
-              #rEmail="ngModel" required>
+          <mat-form-field>
+            <input matInput type="email" placeholder="Email" formControlName="email">
           </mat-form-field>
-        </div>
 
-        <div class="form-group">
-          <mat-form-field fxFlex="100">
-            <input matInput name="rPassword" type="password" placeholder="Password" class="form-control" id="rPassword" [(ngModel)]="user.password"
-              #rPassword="ngModel" required pattern="^\w{4,12}">
+          <mat-form-field>
+            <input matInput type="password" placeholder="Password" formControlName="password" pattern="^\w{4,12}">
           </mat-form-field>
-        </div>
 
-        <div class="form-group" fxLayout="row wrap">
+        <!-- <div class="form-group" fxLayout="row wrap">
           <mat-form-field fxFlex="100">
-            <input matInput name="rConfirmPassword" type="password" placeholder="Confirm Password" class="form-control" id="rConfirmPassword"
-              [(ngModel)]="user.confirmPassword" #rConfirmPassword="ngModel" required pattern="^\w{4,12}" />
+            <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword" pattern="^\w{4,12}" />
           </mat-form-field>
-          <div fxFlex="100" style="color:red;" *ngIf="user.password !== user.confirmPassword && user.confirmPassword">Passwords do not match</div>
-        </div>
+          <div fxFlex="100" style="color:red;" *ngIf="form.password !== form.confirmPassword && form.confirmPassword">Passwords do not match</div>
+        </div> -->
 
-        <div class="form-group">
-          <mat-form-field fxFlex="100">
-            <mat-select [(value)]="user.role">
+          <mat-form-field>
+            <mat-select formControlName="role">
               <mat-option value="admin">Administrator</mat-option>
               <mat-option value="user">Regular User</mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
 
         <button mat-raised-button [disabled]="(!user.name || user.password !== user.confirmPassword) || !user.email || !user.password || (user.password.lenght < 4 ||!userForm.valid)"
           color="primary" type="submit">Submit</button>
