--- a/angular-client/src/app/components/users/register-user/register-user.component.html
+++ b/angular-client/src/app/components/users/register-user/register-user.component.html
@@ -19,15 +19,12 @@
           </mat-form-field>
 
           <mat-form-field>
-            <input matInput type="password" placeholder="Password" formControlName="password" pattern="^\w{4,12}">
+            <input matInput type="password" placeholder="Password" formControlName="password">
           </mat-form-field>
 
-        <!-- <div class="form-group" fxLayout="row wrap">
-          <mat-form-field fxFlex="100">
-            <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword" pattern="^\w{4,12}" />
+          <mat-form-field>
+            <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword"/>
           </mat-form-field>
-          <div fxFlex="100" style="color:red;" *ngIf="form.password !== form.confirmPassword && form.confirmPassword">Passwords do not match</div>
-        </div> -->
 
           <mat-form-field>
             <mat-select formControlName="role">
@@ -36,7 +33,7 @@
             </mat-select>
           </mat-form-field>
 
-        <button mat-raised-button [disabled]="(!user.name || user.password !== user.confirmPassword) || !user.email || !user.password || (user.password.lenght < 4 ||!userForm.valid)"
+        <button mat-raised-button [disabled]="form.invalid"
           color="primary" type="submit">Submit</button>
       </mat-card-content>
     </form>
