--- a/angular-client/src/app/components/users/view-users/view-users.component.html
+++ b/angular-client/src/app/components/users/view-users/view-users.component.html
@@ -13,23 +13,30 @@
 
 <div *ngFor="let user of ((users | search:'name,role':query) | orderBy: sortProperty: reverse)">
   <mat-card class="user-card">
-    <mat-card-content>
-      <div class="info">
-        <div class="user-name naming">{{user.name}}</div>
-        <div *ngIf="user.email && user.email !== ''">
-          <b>Email: </b> {{user.email}}
+
+    <div *ngIf="!(editingUser == user)">
+      <mat-card-content>
+        <div class="info">
+          <div class="user-name naming">{{user.name}}</div>
+          <div *ngIf="user.email && user.email !== ''">
+            <b>Email: </b> {{user.email}}
+          </div>
+          <div *ngIf="user.role && user.role !== ''">
+            <b>Role: </b> {{user.role}}</div>
+          <div *ngIf="user.pronouns && user.pronouns !== ''">
+            <b>Pronouns: </b> {{user.pronouns}}</div>
         </div>
-        <div *ngIf="user.role && user.role !== ''">
-          <b>Role: </b> {{user.role}}</div>
-        <div *ngIf="user.pronouns && user.pronouns !== ''">
-          <b>Pronouns: </b> {{user.pronouns}}</div>
+        <div class="actions">
+          <button mat-icon-button (click)="edit(user)">
+            <mat-icon color="primary">edit</mat-icon>
+          </button>
+        </div>
+      </mat-card-content>
+    </div>
+
+    <div *ngIf="editingUser == user">
+        <app-edit-user [user]="editingUser" (cancel)="cancel()"></app-edit-user>
       </div>
-      <div class="actions">
-        <button mat-button mat-icon-button (click)="delete(user._id)">
-          <mat-icon color="warn">delete</mat-icon>
-        </button>
-      </div>
-    </mat-card-content>
+
   </mat-card>
-  <br>
 </div>
