Fixed form password initialization #80

--- a/angular-client/src/app/components/users/edit-user/edit-user.component.html
+++ b/angular-client/src/app/components/users/edit-user/edit-user.component.html
@@ -5,30 +5,30 @@
         <input matInput placeholder="Name" formControlName="name">
       </mat-form-field>
 
-        <mat-form-field>
-          <input matInput placeholder="Pronouns" formControlName="pronouns">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Pronouns" formControlName="pronouns">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="email" placeholder="Email" formControlName="email">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="email" placeholder="Email" formControlName="email">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="password" placeholder="Password" formControlName="password">
-        </mat-form-field>
+      <mat-form-field>
+        <mat-select formControlName="role">
+          <mat-option value="admin">Administrator</mat-option>
+          <mat-option value="user">Regular User</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword"/>
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" placeholder="New Password" formControlName="password">
+      </mat-form-field>
 
-        <mat-form-field>
-          <mat-select formControlName="role">
-            <mat-option value="admin">Administrator</mat-option>
-            <mat-option value="user">Regular User</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" placeholder="Confirm Password" formControlName="confirmPassword" />
+      </mat-form-field>
 
-      <button mat-raised-button color="primary" (click)="update()" [disabled]="resourceForm.invalid">Update</button>
+      <button mat-raised-button color="primary" (click)="update()" [disabled]="userForm.invalid">Update</button>
       <button mat-raised-button (click)="cancelEdit()">Cancel</button>
 
     </form>
