Initial work on urgent phonelogs #90

--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -1,4 +1,9 @@
 <mat-card>
     <mat-card-title>Reports</mat-card-title>
-    <p>Nothing to show</p>
+    <mat-card-content>
+        <h2>Calls by urgency</h2>
+        <p>Urgent YES: {{this.urgency.get("urgentYES")}}</p>
+        <p>Urgent  NO: </p>
+        <p>Total calls: </p>
+    </mat-card-content>
 </mat-card>
