--- a/angular-client/src/app/components/users/view-users/view-users.component.css
+++ b/angular-client/src/app/components/users/view-users/view-users.component.css
@@ -1,6 +1,7 @@
 .user-card {
-    margin: 1rem;
-    width: 40rem;
+  display: block;
+  margin: 1rem;
+  width: 40rem;
 }
 
 .user-card mat-card-content {
