--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -14,6 +14,11 @@
     </a>
   </span>
   <span class="example-fill-remaining-space"></span>
+  <span>
+  <mat-select #langSelect (change)="translate.use(langSelect.value)">
+          <mat-option *ngFor="let lang of translate.getLangs()" [value]="lang" selected="lang === translate.currentLang">{{ lang }}</mat-option>
+        </mat-select>
+  </span>
   <span *ngIf="this.authenticationService.loggedIn">
     <button mat-button (click)="logout()">Logout</button>
   </span>
