--- a/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
+++ b/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
@@ -1,19 +1,19 @@
-<h1 mat-dialog-title>New Case</h1>
-<h5>Participant: {{data.participant.name}}</h5>
+<h1 mat-dialog-title>{{"CaseModal.New"|translate}}</h1>
+<h5>{{"CaseModal.Participant"|translate} {{data.participant.name}}</h5>
 <form #caseForm="ngForm">
   <mat-form-field>
     <mat-select required placeholder="Case Type" name="caseType" [(ngModel)]="mycase.type">
       <mat-option *ngFor="let type of resourceTypes" [value]="type">{{type}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <p class="hint">Select urgency of request</p>
+  <p class="hint">{{"CaseModal.Urgency"|translate}</p>
   <mat-radio-group required [(ngModel)]="mycase.urgency" name="urgency" ng-checked="urgency[0]">
     <mat-radio-button *ngFor="let urgency of urgencies" [value]="urgency">{{urgency}}&nbsp;&nbsp;</mat-radio-button>
   </mat-radio-group>
   <mat-form-field>
     <input matInput placeholder="Enter any relevant notes here" value="" [(ngModel)]="mycase.notes" name="notes">
   </mat-form-field>
-<div class="hint">Select the resources for this case</div>
+<div class="hint">{{"CaseModal.Resources"|translate}}</div>
   <mat-form-field>
     <mat-select multiple [(ngModel)]="mycase.contactedResources" name="contactedResources">
         <span *ngFor="let resource of resources" >
@@ -22,7 +22,7 @@
     </mat-select>
   </mat-form-field>
   <mat-dialog-actions>
-      <button [disabled]="!caseForm.valid" mat-button (click)="submit()">Submit</button>
-      <button mat-button (click)="cancel()">Cancel</button>
+      <button [disabled]="!caseForm.valid" mat-button (click)="submit()">{{"CaseModal.Submit"|translate}}</button>
+      <button mat-button (click)="cancel()">{{"CaseModal.Cancel"|translate}}</button>
   </mat-dialog-actions>
 </form>
