--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -9,14 +9,14 @@
 
           <div class="form-group">
             <mat-form-field fxFlex="100">
-              <label for="email">Email</label>
+              <label for="email">{{"Login.Email"|translate}}</label>
               <input name="email" matInput type="email" class="form-control" id="email" [(ngModel)]="user.email" #email="ngModel" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
             </mat-form-field>
           </div>
 
           <div class="form-group">
             <mat-form-field fxFlex="100">
-              <label for="password">Password</label>
+              <label for="password">{{"Login.Password"|translate}}</label>
               <input matInput name="password" type="password" class="form-control" id="password" [(ngModel)]="user.password" #password="ngModel"
                 required>
             </mat-form-field>
